Adding authentication using jwt
